# SkalaMeetingEngine

./: .gitignore  AGENTS.md  KNOWN_ISSUES.md  LICENSE  PLANS.md  README.md  TASK.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: meetings-calendar-architecture.md
scripts/: prepare-spellcheck-dictionaries.mjs  run-codex-terminal-tests.mjs  run-documents-link-tests.ts
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/calendar/: models.rs  store.rs
src-tauri/src/commands/: calendar.rs  codex.rs  codex_app.rs  documents.rs  meetings.rs  mod.rs  recording.rs  spellcheck.rs  transcription.rs  types.rs
src-tauri/src/meetings/: mod.rs  models.rs  recorder.rs  settings.rs  store.rs  transcription.rs
src/components/: AppShell.tsx
src/data/: mockData.ts  sampleCalendar.ts
src/hooks/: useCodexController.ts  useLocalStorageState.ts
src/lib/: calendarApi.ts  codexAccess.ts  codexApi.ts  codexContext.ts  codexDiagnostics.ts  codexModelOptions.ts  codexThreads.ts  documentGraphSimulation.ts  documentsLinks.ts  meetingApi.ts
src/models/: calendar.ts  codex.ts  documents.ts  run.ts  spellcheck.ts  workspace.ts
src/screens/: CaptureScreen.tsx  CodexScreen.tsx  DocumentsScreen.tsx  HomeScreen.tsx  MeetingsScreen.tsx  RunsScreen.tsx  SettingsScreen.tsx  VaultScreen.tsx
src/services/: codexContextFileStore.ts  documentsFileStore.ts  spellcheckDictionaryStore.ts
src/workers/: spellcheck.worker.ts
(+34 files in other folders)
