[package]
name = "skala_meeting_engine"
version = "0.1.0"
description = "Workflow-first desktop workbench for meetings and Codex"
authors = ["Axel Karlsson"]
edition = "2021"

[lib]
name = "skala_meeting_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
cpal = "0.15.3"
hound = "3.5.1"
